--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -23,9 +23,7 @@
                       Dropdown
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Profil</a></li>
-                      <li><a class="dropdown-item" href="#">Ubah Password</a></li>
-                      <li><a class="dropdown-item" href="#">Keluar</a></li>
+                      <li><a class="dropdown-item" id="logout" href="#">Keluar</a></li>
                     </ul>
                   </li>
             </ul>
