--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -13,6 +13,11 @@
     <div class="circle"><i class="fas fa-lock fa-2x padlock"></i></div>
         <div class="wrap-login">
             <div class="wrap-form">
+                <div class="row">
+                    <div class="col-md-12 alert alert-danger hide" role="alert">
+                        Wrong Username & password !!
+                    </div>
+                </div>
                 <div class="row">        
                     <div class="col-md-12 wrap-input">
                         <input class="input-style" type="text" name="username" id="username" placeholder="username">
@@ -30,7 +35,8 @@
                 </div>                
             </div>              
         </div>          
-
+        
+    <script type="text/javascript" src="/plugin/bootstrap/js/bootstrap.bundle.js"></script>
     <script type="text/javascript" src="/js/scriptlogin.js"></script>
 </body>
 </html>
