--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,10 @@ body {
     margin-top: 25px;
 }
 
+.wrapper-contain2 {
+    margin-top: 25px;
+}
+
 .wrapper-list {
     display: flex;
     align-items: center;
@@ -104,6 +108,29 @@ body {
     text-align-last: center;
     height: 180px;
     border-bottom: 1px solid #6fb555;
+}
+
+.img-style {
+    height: 150px;
+    background-repeat: no-repeat;
+}
+
+.wrapper-upd {
+    margin-top: 25px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.img-upd {
+    height: 380px;
+    width: 500px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+
+#myFrame {
+    width: 500px;
+    height: 380px;
+    overflow: hidden;
 }
 
 /* .btn-aksi {
