sukses update dan delete file exist

--- a/Views/product-add.ejs
+++ b/Views/product-add.ejs
@@ -51,9 +51,19 @@
                 Congratulation...your product saved. Thank You!
             </div>
         </div>
+        <div class="row alert-add hide" id="alert-upload-success">
+            <div class="alert alert-success" role="alert">
+                Your Image successfully Uploaded !!
+            </div>
+        </div>
         <div class="row alert-add hide" id="alert-add-danger">
             <div class="alert alert-danger" role="alert">
                 Ohhh No!!!....Somethink Error..
+            </div>
+        </div>
+        <div class="row alert-add hide" id="alert-upload-danger">
+            <div class="alert alert-danger" role="alert">
+                Ohhh No!!!....Failed Upload !!
             </div>
         </div>
 
@@ -78,7 +88,7 @@
                             </div>    
                             <div class="mb-3">
                                 <label for="formFile" class="form-label">Image</label>
-                                <input class="form-control" type="file" id="formFile" name="img">
+                                <input class="form-control" type="file" id="formFile" name="image">
                             </div> 
                             <div class="mb-3">
                                 <button type="submit" class="btn-tambah" id="btn-submit">Submit</button>
