--- a/Views/product-add.ejs
+++ b/Views/product-add.ejs
@@ -66,6 +66,11 @@
                 Ohhh No!!!....Failed Upload !!
             </div>
         </div>
+        <div class="row alert-add hide" id="alert-add-danger2">
+            <div class="alert alert-danger" role="alert">
+                Oopsss...!!! Image is required...
+            </div>
+        </div>
 
         <div class="row add-prod">
             <div class="col-md-5 add-prod-left">
