--- a/Views/product-detail.ejs
+++ b/Views/product-detail.ejs
@@ -39,7 +39,7 @@
 
         <div class="row head-text">
             <div class="col-md-9 left">
-                <h3>Awesome! Best time for set up your product now ...</h3>
+                <h3>Wowww....this product very nice!!</h3>
             </div> 
             <div class="col-md-3 right">
                 <p class="dateP">Tuesday, 26 Oct 2021</p>
@@ -63,8 +63,8 @@
             </div>
             <div class="col-md-7 add-prod-right">
                 <div class="row">
-                        <div class="col-md-12">
-                            <input type="hidden" id="id" value="<%= result._id %>"
+                        <div class="col-md-12 right-add">
+                            <input type="hidden" id="id" value="<%= result._id %>">
                             <div class="mb-3">
                                 <label for="inputName" class="form-label">Product Name</label>
                                 <input type="text" class="form-control" id="inputName" name="nameprod" value="<%= result.nameprod %>" readonly>
