success modify condition islogin

--- a/Views/product.ejs
+++ b/Views/product.ejs
@@ -42,7 +42,7 @@
                 <h3>Hi,Welcome Back!</h3>
             </div> 
             <div class="col-md-3 right">
-                <p class="dateP">Tuesday, 26 Oct 2021</p>
+                <p class="dateP"></p>
             </div>   
         </div>
 
@@ -58,8 +58,8 @@
             <div class="col-md-3 banner-right">
                 <div class="wrapper-search">
                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search Your Product" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" name="key" placeholder="Search Your Product" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit" id="btn-search">Search</button>
                     </form>
                 </div>
             </div>
@@ -109,5 +109,6 @@
 
       <script type="text/javascript" src="/plugin/bootstrap/js/bootstrap.bundle.js"></script>
       <script type="text/javascript" src="/js/scriptproduct.js"></script>
+      
 </body>
 </html>
